# vingress

./: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  configmap.rs  index.yaml  test.sh
.github/workflows/: audit.yaml  clippy.yaml  pr-events-slack.yaml  rust.yml
chart/: values.yaml
chart/templates/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
charts/: Chart.yaml  README.md  artifacthub-repo.yml  index.yaml  values.schema.json  values.yaml  varnish-ingress-controller-0.1.0.tgz  varnish-ingress-controller-0.2.0.tgz  varnish-ingress-controller-0.3.0.tgz  varnish-ingress-controller-0.3.1.tgz  varnish-ingress-controller-0.3.2.tgz  varnish-ingress-controller-0.3.2.tgz.prov  varnish-ingress-controller-0.4.0.tgz  varnish-ingress-controller-0.4.0.tgz.prov
charts/key/: vingress.public.asc
charts/templates/: clusterrole.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingressclass.yaml  pdb.yaml  service.yaml
kind/: README.md  cluster.yaml  full.yaml  grafana.yaml  media.yaml  prometheus.yaml  smp.yaml
src/: cli.rs  configmap.rs  ingress.rs  leader.rs  main.rs  service.rs  varnish.rs  varnishlog.rs  varnishlog_test.rs  varnishstat.rs  vcl.rs  vcl_test.rs
template/: vcl.hbs
tests/: vcl_test.rs
