[package]
name = "vingress"
version = "0.5.0"
edition = "2024"

[profile.release]
strip = true
lto = true
opt-level="z"
codegen-units = 1
panic = 'abort'

[dependencies]
kube = { version = "1.0.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
tokio = { version = "1.44.2", features = ["full"] }
futures = { version = "0.3.17", default-features = false }
handlebars = "6.0.0"
serde = "1.0.204"
serde_json = "1.0.120"
env_logger = "0.11.5"
log = "0.4.22"
chrono = "0.4.38"
clap = {version = "4.5.11", features = ["derive","env"]}
regex = "1.11.0"
rocket = "0.5.1"
prometheus = "0.13.4"
opentelemetry-otlp = "0.28.0"
opentelemetry-prometheus = "0.28.0"
opentelemetry = { version = "0.28.0", features = ["metrics"]}
opentelemetry_sdk = "0.28.0"
