[package]
name = "vingress"
version = "0.5.0"
edition = "2024"

[profile.release]
strip = true
lto = true
opt-level="z"
codegen-units = 1
panic = 'abort'

[dependencies]
kube = { version = "3.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.0", features = ["latest"] }
tokio = { version = "1.50.0", features = ["full"] }
futures = { version = "0.3.32", default-features = false }
handlebars = "6.4.0"
serde = "1.0.228"
serde_json = "1.0.149"
env_logger = "0.11.9"
log = "0.4.29"
chrono = "0.4.44"
clap = {version = "4.5.60", features = ["derive","env"]}
regex = "1.12.3"
rocket = "0.5.1"
prometheus = "0.14.0"
opentelemetry-otlp = "0.29.0"
opentelemetry-prometheus = "0.29.1"
opentelemetry = { version = "0.29.0", features = ["metrics"]}
opentelemetry_sdk = "0.29.0"
